--- a/backend/app/pyproject.toml
+++ b/backend/app/pyproject.toml
@@ -24,8 +24,7 @@ sqlalchemy = "^1.3.16"
 pytest = ">6"
 python-jose = {extras = ["cryptography"], version = "^3.1.0"}
 aiofiles = "^0.6.0"
-evolved5g = "^0.8.3"
-
+pika= "1.2.0"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.770"
