--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,10 +12,6 @@ services:
       - .env
     environment:
       - PGDATA=/var/lib/postgresql/data/pgdata
-    networks:
-      - services_default
-
-
 
   pgadmin:
     image: dpage/pgadmin4
@@ -28,10 +24,8 @@ services:
       - .env
     logging:
       driver: none
-    networks:
-      - services_default
 
-  mongo_nef:
+  mongo:
     image: mongo:4.4.10
     profiles: ["debug", "dev"]
     volumes:
@@ -42,8 +36,6 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: "${MONGO_USER}"
       MONGO_INITDB_ROOT_PASSWORD: "${MONGO_PASSWORD}"
-    networks:
-      - services_default
 
   mongo-express:
     image: mongo-express:1.0.0-alpha.4
@@ -56,12 +48,39 @@ services:
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: "${MONGO_USER}"
       ME_CONFIG_MONGODB_ADMINPASSWORD: "${MONGO_PASSWORD}"
-      ME_CONFIG_MONGODB_URL: mongodb://${MONGO_USER}:${MONGO_PASSWORD}@mongo_nef:27017/
+      ME_CONFIG_MONGODB_URL: mongodb://${MONGO_USER}:${MONGO_PASSWORD}@mongo:27017/
       ME_CONFIG_MONGODB_ENABLE_ADMIN: "${MONGO_EXPRESS_ENABLE_ADMIN}"
-    networks:
-      - services_default
 
+  rabbitmq:
+    image: rabbitmq:management
+    container_name: rabbitmq
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+
+  # producer:
+  #   image: '${DOCKER_IMAGE_PRODUCER?Variable not set}:${TAG-latest}'
+  #   profiles: ["debug", "dev"]
+  #   restart: unless-stopped
+  #   depends_on:
+  #     - rabbitmq
+  #   build:
+  #     context: ./backend
+  #     dockerfile: Dockerfile.producer
   
+  report:
+    image: '${DOCKER_IMAGE_REPORT?Variable not set}:${TAG-latest}'
+    profiles: ["debug", "dev"]
+    ports:
+      - "3000:3000"
+    volumes:
+      - shared-data:/shared
+    env_file:
+      - .env
+    build:
+      context: ./backend
+      dockerfile: Dockerfile.report
+    
   backend:
     image: '${DOCKER_IMAGE_BACKEND?Variable not set}:${TAG-latest}'
     profiles: ["debug", "dev"]
@@ -70,6 +89,7 @@ services:
       - "${SERVER_PORT}:80"
     volumes:
       - ./backend/app:/app
+      - shared-data:/shared
     env_file:
       - .env
     environment:
@@ -85,17 +105,9 @@ services:
         INSTALL_JUPYTER: ${INSTALL_JUPYTER-true}
     extra_hosts:
       - "host.docker.internal:host-gateway"
-    networks:
-      - services_default
-
-
-networks:
-    services_default:
-      external: ${EXTERNAL_NET}
-
 
 volumes:
   app-db-data:
   pgadmin-data:
   app-mongo-db-data:
-
+  shared-data:
