--- a/backend/app/pyproject.toml
+++ b/backend/app/pyproject.toml
@@ -12,7 +12,8 @@ pymongo = "^4.1.0"
 python-multipart = "^0.0.5"
 email-validator = "^1.0.5"
 requests = "^2.26.0"
-passlib = {extras = ["bcrypt"], version = "^1.7.2"}
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+bcrypt = "^4.0.1"
 tenacity = "^6.1.0"
 pydantic = "^1.10"
 emails = "^0.6"
@@ -20,7 +21,7 @@ raven = "^6.10.0"
 gunicorn = "^20.1.0"
 jinja2 = "3.0.3"
 psycopg2-binary = "^2.8.5"
-sqlalchemy = "^1.3.16"
+sqlalchemy = "1.3.16"
 pytest = ">6"
 python-jose = {extras = ["cryptography"], version = "^3.1.0"}
 aiofiles = "^0.6.0"
